--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/db?useSSL=true&requireSSL=true&verifyServerCertificate=false&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:password}
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/db?useSSL=true&requireSSL=true&verifyServerCertificate=false&allowPublicKeyRetrieval=true
+# spring.datasource.username=${MYSQL_USER:root}
+# spring.datasource.password=${MYSQL_PASSWORD:password}
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://bp46pugmx38jbyoxwj4l-mysql.services.clever-cloud.com:3306/bp46pugmx38jbyoxwj4l
+# spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=uqgrlkvvjnclundl
+spring.datasource.password=96QHFaIdmmTLBBz12YQm
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
